# Portfolio

./: .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Game of life.sdf  Portfolio.sdf  Portfolio.sln
Examples/Cell Shading/: CMakeLists.txt  Cell Shading.vcxproj.filters
Examples/Chromatic Abberation/: CMakeLists.txt  Chromatic Abberation.vcxproj.filters
Examples/Dilation/: CMakeLists.txt  Dilation.vcxproj.filters
Examples/Erosion/: CMakeLists.txt  Erosion.vcxproj.filters
Examples/Game of Life/: Game of Life.vcxproj.filters  Game of life.vcxproj  Game of life.vcxproj.filters  GameOfLife  errors.txt  makefile
Examples/Gaussian Blurring/: CMakeLists.txt  Gaussian Blurring.vcxproj.filters
Examples/Parallax mapping/: CMakeLists.txt  Parallax mapping.vcxproj.filters
Examples/Perlin Noise/: CMakeLists.txt  Perlin Noise.vcxproj.filters
Examples/Scene/: CMakeLists.txt  Scene.vcxproj.filters
Examples/Scene/resources/shaders/: Default.vert  Shaders.txt  default.frag
Examples/Scene/source/: Scene.cpp
Examples/bubble displacement/: Bubble Displacement.vcxproj  Bubble Displacement.vcxproj.filters  CMakeLists.txt
Examples/contrast/: CMakeLists.txt  contrast.vcxproj.filters
Examples/edge detection/: CMakeLists.txt  edge detection.vcxproj.filters
Examples/gamma/: CMakeLists.txt  gamma.vcxproj.filters
Examples/pixelize/: CMakeLists.txt  pixelize.vcxproj.filters
Examples/radial blur/: CMakeLists.txt  radial blur.vcxproj.filters
Examples/sepia/: CMakeLists.txt  sepia.vcxproj.filters
Examples/sharpen/: CMakeLists.txt  sharpen.vcxproj.filters
Examples/texture Settings/: CMakeLists.txt  texture Settings.vcxproj.filters
Examples/textured scene/: textured scene.vcxproj.filters
Examples/texturedScene/: CMakeLists.txt
Game of Life/: GameOfLife.cpp
Release/: Bubble Displacement.iobj  Bubble Displacement.ipdb
dependencies/FreeImage/: FreeImage.2013.sdf  FreeImage.2013.vcxproj
dependencies/SOIL/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj.filters  Makefile  SOIL.vcxproj.filters  cmake_install.cmake
dependencies/gli/: CMakeCache.txt
dependencies/microprofile/: .gitignore  microprofile.h
dependencies/tinySamplers/: tinySamplers.vcxproj.filters
examples/: 3DScene - Shortcut.lnk
examples/3DScene/: CMakeCache.txt  CMakeLists.txt  Settings.cap  imgui.ini
examples/Bindless/: CMakeLists.txt  imgui.ini
examples/ComputeTest/: CMakeLists.txt  imgui.ini
examples/DepthPrePass/: CMakeLists.txt  DefaultPreset.ini  ReShade.ini  imgui.ini
examples/Displacement/: CMakeLists.txt  imgui.ini
examples/DynamicRes/: CMakeLists.txt  imgui.ini
examples/FFTWaves/: CMakeLists.txt  imgui.ini
examples/FXAA/: CMakeLists.txt  imgui.ini
examples/Frost/: CMakeLists.txt  imgui.ini
examples/GOLCompute/: CMakeLists.txt  imgui.ini
examples/GodRay/: CMakeLists.txt  imgui.ini
examples/HeatHaze/: CMakeLists.txt  imgui.ini
examples/HeightFog/: CMakeLists.txt  imgui.ini
examples/KHR viewer/: CMakeLists.txt
examples/MSAA/: CMakeLists.txt  imgui.ini
examples/ManyModels/: CMakeLists.txt
examples/Outline/: CMakeLists.txt  imgui.ini
examples/Performance_Query/: CMakeLists.txt  imgui.ini
examples/Perlin3D/: CMakeLists.txt  imgui.ini
examples/PhongLighting/: CMakeLists.txt  imgui.ini
examples/Picking/: CMakeLists.txt  imgui.ini
examples/SMAA/: CMakeLists.txt  ReShade.ini  imgui.ini
examples/SMAA 1xt/: CMakeLists.txt  imgui.ini
examples/SMAA 2xt/: CMakeLists.txt  imgui.ini
examples/SSAA/: CMakeLists.txt  imgui.ini
examples/ShadowMapping/: CMakeLists.txt
examples/Stencil/: CMakeLists.txt  imgui.ini
examples/Subroutines/: CMakeLists.txt
examples/TXAA/: CMakeLists.txt  imgui.ini
examples/TemporalAA/: CMakeLists.txt  imgui.ini
examples/Transform/: CMakeLists.txt  imgui.ini
examples/VXAA/: CMakeLists.txt  imgui.ini
examples/animation/: CMakeLists.txt
examples/bubbleDisplacement/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  errors.txt  imgui.ini
examples/cellShading/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  imgui.ini
examples/chromaticAbberation/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  imgui.ini
examples/command/: CMakeLists.txt  imgui.ini
examples/contrast/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  imgui.ini
examples/dilation/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  imgui.ini
examples/edgeDetection/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  errors.txt  imgui.ini
examples/erosion/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  errors.txt  imgui.ini
examples/framebuffer/: CMakeLists.txt  imgui.ini
examples/gameOfLife/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  Settings.cap  cmake_install.cmake  errors.txt  imgui.ini
examples/mipmapping/: CMakeLists.txt  imgui.ini
examples/mipmapping/MipMapping.dir/Debug/: Scene.exe.recipe
examples/mipmapping/include/: MipMapping.h
examples/mipmapping/source/: MipMapping.cpp
examples/parallaxMapping/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  imgui.ini
examples/parallaxMapping/Parallax.dir/Debug/: Scene.exe.recipe
examples/parallaxMapping/include/: Parallax.h
examples/parallaxMapping/source/: Parallax.cpp
examples/sharpen/: CMakeCache.txt  CMakeLists.txt  Makefile  Scene  cmake_install.cmake  errors.txt  imgui.ini
examples/sharpen/Sharpen.dir/Debug/: Scene.exe.recipe
examples/sharpen/include/: Sharpen.h
examples/sharpen/source/: Sharpen.cpp
examples/soundTest/: CMakeLists.txt  imgui.ini
examples/soundTest/include/: Compressor.h  SoundScene.h
examples/soundTest/source/: Compressor.cpp  Sound.cpp
include/: Camera.h  DefaultUniformBuffer.h  FrameBuffer.h  Grid.h  Model.h  Ray.h  Scene.h  Scene.h~RF7213730.TMP  Scene3D.h  Texture.h  TexturedScene.h  Transform.h  UniformBuffer.h  Utilities.h  VertexAttribute.h  VertexBuffer.h
properties/: texturedSceneprops.props
resources/: shaders.7z
(+1087 files in other folders)
