cmake_minimum_required(VERSION 2.6)
project (Portfolio CXX)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include (GNUInstallDirs)
include (CMakePackageConfigHelpers)

set (PROJECT_LABEL "Portfolio")
add_definitions (-D_CRT_SECURE_NO_WARNINGS)

find_Package(OpenGL REQUIRED)

if(UNIX)
	set (LINK_DIRECTORY "/usr/lib")
	set (LIBS "-X11 ${OPENGL_LIBRARIES}")
	set (COMMON_FLAGS "-std=c++11 -DSO -Wall -Wextra")
	set (DEBUG_FLAGS "-g -DDEBUG")
	set (ERROR_OUTPUT "2> errors.txt")
	
	if(CMAKE_BUILD_TYPE MATCHES Release)
		add_definitions(${COMMON_FLAGS} ${ERROR_OUTPUT})
	elseif (CMAKE_BUILD_TYPE MATCHES Debug)
		add_definitions(${COMMON_FLAGS} ${DEBUG_FLAGS} ${ERROR_OUTPUT})
	elseif(CMAKE_BUILD_TYPE MATCHES "")
		add_definitions(${COMMON_FLAGS} ${DEBUG_FLAGS} ${ERROR_OUTPUT})
	endif()
endif(UNIX)

if(WIN32)
	set (LIBS "${OPENGL_LIBRARIES}")
endif(WIN32)

set (COMMON_OUTPUT_DIR "./bin")
set (DEBUG_OUTPUT_DIR "./bin/Debug/")
set (RELEASE_OUTPUT_DIR "./bin/Release/")

set (TINYWINDOW_EXAMPLE_DIR "./dependencies/tinywindow/Example")
set (TINYWINDOW_VULKAN_DIR "./dependencies/tinywindow/vulkan")
set (TINYEXTENDER_EXAMPLE_DIR "./dependencies/tinyextender/Example")
set (TINYSHADERS_EXAMPLE_DIR "./dependencies/tinyshaders/Example")
set (TINYCLOCK_EXAMPLE_DIR "./dependencies/tinyclock/Example")
set (SOIL_DIR "./dependencies/SOIL")

#build dependencies
add_subdirectory("${TINYWINDOW_EXAMPLE_DIR}")
add_subdirectory("${TINYWINDOW_VULKAN_DIR}")
add_subdirectory("${TINYEXTENDER_EXAMPLE_DIR}")
add_subdirectory("${TINYSHADERS_EXAMPLE_DIR}")
add_subdirectory("${TINYCLOCK_EXAMPLE_DIR}")
add_subdirectory("${SOIL_DIR}")

#build examples
add_subdirectory("./Examples/Scene/")
add_subdirectory("./Examples/texturedScene/")
add_subdirectory("./Examples/bubble displacement/")
add_subdirectory("./Examples/Cell Shading/")
add_subdirectory("./Examples/Chromatic Abberation/")
add_subdirectory("./Examples/Contrast/")
add_subdirectory("./Examples/Dilation")
add_subdirectory("./Examples/Edge detection")
add_subdirectory("./Examples/Erosion")
add_subdirectory("./Examples/Gamma")
add_subdirectory("./Examples/Gaussian Blurring")
add_subdirectory("./Examples/Parallax Mapping")
add_subdirectory("./Examples/Perlin Noise")
add_subdirectory("./Examples/Pixelize")
add_subdirectory("./Examples/radial blur")
add_subdirectory("./Examples/sepia") #FIX!
add_subdirectory("./Examples/sharpen")
add_subdirectory("./Examples/texture settings")
add_subdirectory("./Examples/Game of life")
add_subdirectory("./Examples/Model")